# talent-graph

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.claude/skills/codebase-overview/: SKILL.md
.claude/skills/frontend-patterns/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AppShell.tsx  BurnoutBadge.tsx  FitBadge.tsx  MetricCard.tsx  SkillRadar.tsx
frontend/src/i18n/: en.json  index.ts  ko.json
frontend/src/lib/: utils.ts
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_cli/: test_app.py
tests/test_company/: test_api.py  test_factory.py  test_templates.py
tests/test_config/: test_simulation_config.py
tests/test_estimation/: test_bayesian.py  test_csv_import.py  test_prior.py  test_store.py
tests/test_explainer/: test_api.py  test_breakdown.py  test_registry.py
tests/test_game/: test_achievements.py  test_api.py  test_company_score.py  test_quarter_report.py
tests/test_ontology/: test_graph.py  test_models.py
tests/test_recommendation/: test_api.py  test_engine.py
tests/test_scoring/: test_burnout.py  test_engine.py  test_enhanced.py  test_sensitivity.py  test_skill_match.py  test_verification.py
tests/test_simulation/: test_attrition.py  test_engine.py  test_enhanced_engine.py  test_enhanced_quarter.py  test_growth.py  test_morale.py  test_quarter.py  test_random_events.py
(+87 files in other folders)
