[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talentgraph"
version = "0.1.0"
description = "Ontology-driven workforce simulation engine for role fit, department placement, and performance prediction."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
talentgraph = "talentgraph.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/talentgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["talentgraph"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100
